--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                 <span class="image">
                   <img src="img/trab2.png" alt="" />
                 </span>
-                <a href="https://RetrogamePY.com">
+                <a href="https://blog.RetrogamePY.com">
                   <h2>blog.RetrogamePY.com</h2>
                   <div class="content">
                     <p>Web Blog en "wordpress" de videojuegos retro.</p>
