--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
     />
-    <!-- <meta property="og:url" content="https://www.frnandmg.dev/">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="FrnandMG.dev">
-  <meta property="og:description" content="Web Design - Web Developent - Branding - Web Marketing">
-  <meta property="og:image" content="https://frnandmg.dev/img/og2.png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630"> -->
+
+    <meta property="og:url" content="https://frnandmg.github.io/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="FrnandMG">
+    <meta property="og:description" content="Web Design - Web Developent - Branding - Web Marketing">
+    <meta property="og:image" content="https://frnandmg.github.io/img/logo.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630"> 
 
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3340599443142913"
      crossorigin="anonymous"></script>
